--- a/app/src/main/res/layout/activity_create_new_product.xml
+++ b/app/src/main/res/layout/activity_create_new_product.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".createNewProduct">
+    tools:context=".createNewProduct"
+    android:background="@color/purple_100">
 
     <include
         android:id="@+id/toolbar"
@@ -12,17 +13,20 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="15dp">
 
     <LinearLayout
         android:id="@+id/linearLayoutOne"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_below="@+id/toolbar">
+        android:padding="10dp"
+        android:layout_below="@+id/toolbar"
+        android:background="@color/white">
 
     <!-- Product Name -->
     <TextView
