--- a/app/src/main/res/layout/activity_show_pantry_list.xml
+++ b/app/src/main/res/layout/activity_show_pantry_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/purple_100">
 
     <include layout="@layout/toolbar" />
 
@@ -61,8 +62,9 @@
         android:contentDescription="Add Item"
         app:elevation="0dp"
         app:fabSize="normal"
-        app:srcCompat="@drawable/baseline_add_24"
-        android:background="@drawable/custom_floating_action_button"
+        android:src="@drawable/baseline_add_24"
+        android:backgroundTint="@color/purple_500"
+        app:tint="#FFFFFF"
         app:useCompatPadding="false" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
