--- a/app/src/main/res/layout/activity_show_recipe_details.xml
+++ b/app/src/main/res/layout/activity_show_recipe_details.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".showRecipeDetails">
+    tools:context=".showRecipeDetails"
+    android:background="@color/purple_100">
 
     <include
         layout="@layout/toolbar"/>
@@ -14,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:background="@color/purple_100">
+        android:background="@color/white">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,7 +29,9 @@
                 android:padding="8dp"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:text="Recipe Name"/>
+                android:textColor="@color/black"
+                android:background="@color/purple_200"
+                android:text="Recipe Name" />
 
             <TextView
                 android:id="@+id/recipeSource"
@@ -61,7 +64,9 @@
                 android:padding="8dp"
                 android:textSize="18dp"
                 android:text="Ingredients"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@color/purple_200"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -77,7 +82,9 @@
                 android:padding="8dp"
                 android:textSize="18dp"
                 android:text="Instructions"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@color/purple_200"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
