--- a/app/src/main/res/layout/activity_show_user_profile.xml
+++ b/app/src/main/res/layout/activity_show_user_profile.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".showProfile">
+    tools:context=".showUserProfile">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
