--- a/app/src/main/res/layout/activity_show_user_profile.xml
+++ b/app/src/main/res/layout/activity_show_user_profile.xml
@@ -42,7 +42,7 @@
                 android:text="name"
                 android:textColor="@android:color/black"
                 android:textSize="25sp"
-                android:textStyle="normal"/>
+                android:textStyle="bold"/>
 
             <Button
                 android:id="@+id/editButton"
@@ -125,6 +125,20 @@
             android:textStyle="normal"/>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/deleteAccButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="Delete Account"
+            android:textAllCaps="false"
+            android:backgroundTint="@color/red"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:cornerRadius="48dp"/>
 
 
     </LinearLayout>
