--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="lavender">#8692f7</color>
     <color name="grey">#d2d2d2</color>
+    <color name="red">#FA1B1B</color>
 
 
 </resources>
