--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_gravity="center"
         android:backgroundTint="#6B4EFF"
