--- a/app/src/main/res/layout/activity_show_recipe_list_by_search.xml
+++ b/app/src/main/res/layout/activity_show_recipe_list_by_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".showRecipeList"
+    tools:context=".showRecipeListBySearch"
     android:background="@color/purple_100">
 
     <include
@@ -17,18 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_background"
-        android:elevation="2dp"
-        app:itemIconSize="30dp"
-        app:itemIconTint="@drawable/item_selector"
-        app:itemRippleColor="@android:color/transparent"
-        app:menu="@menu/bottom_menu"
-        app:labelVisibilityMode="labeled"/>
 
 
 </LinearLayout>
