--- a/app/src/main/res/layout/activity_show_recipe_details.xml
+++ b/app/src/main/res/layout/activity_show_recipe_details.xml
@@ -56,6 +56,14 @@
 <!--                android:padding="8dp"-->
 <!--                android:textSize="14dp"-->
 <!--                android:text="Summary"/>-->
+            <Button
+                android:id="@+id/btnNutritionInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See Nutrition Information"
+                android:textStyle="bold"
+                android:layout_gravity="center_horizontal"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
