--- a/app/src/main/res/layout/activity_register_account.xml
+++ b/app/src/main/res/layout/activity_register_account.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="  Name"
-            android:inputType="textEmailAddress"
+            android:inputType="textPersonName"
             android:textColorHint="#808080"
             android:drawableLeft="@drawable/baseline_person_pin_24"
             android:drawablePadding="8dp"
@@ -89,7 +89,6 @@
             android:id="@+id/passwordField"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:inputType="textPassword"
             android:background="@drawable/custom_border"
             android:hint="  Password"
             android:drawableLeft="@drawable/baseline_lock_24"
