--- a/app/src/main/res/layout/activity_add_ingredient_to_kitchen.xml
+++ b/app/src/main/res/layout/activity_add_ingredient_to_kitchen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".addProductToPantry"
+    tools:context=".Controllers.addIngredientToKitchen"
     android:background="@color/purple_100">
 
     <include
