--- a/app/src/main/res/layout/activity_register_account.xml
+++ b/app/src/main/res/layout/activity_register_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".registerAccount"
+    tools:context=".Controllers.registerAccount"
     android:background="@color/purple_100">
 
     <LinearLayout
