--- a/app/src/main/res/layout/activity_show_recipe_details.xml
+++ b/app/src/main/res/layout/activity_show_recipe_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".showRecipeDetails"
+    tools:context=".Controllers.showRecipeDetails"
     android:background="@color/purple_100">
 
     <include
