--- a/app/src/main/res/layout/activity_show_recipe_nutrients.xml
+++ b/app/src/main/res/layout/activity_show_recipe_nutrients.xml
@@ -6,16 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/purple_100"
-    tools:context=".showRecipeNutrients">
+    tools:context=".Controllers.showRecipeNutrients">
 
     <include
         layout="@layout/toolbar"/>
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/custom_border">
 
     <TextView
         android:layout_width="0dp"
@@ -51,6 +53,13 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="15dp"
+        android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,5 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+
+    </LinearLayout>
 
 </LinearLayout>
