--- a/app/src/main/res/layout/activity_show_user_profile.xml
+++ b/app/src/main/res/layout/activity_show_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".showUserProfile"
+    tools:context=".Controllers.showUserProfile"
     android:background="@color/purple_100">
 
     <include
@@ -51,7 +51,7 @@
 
                     <Button
                         android:id="@+id/editButton"
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
                         android:text="Edit Profile"
@@ -63,7 +63,7 @@
 
                     <Button
                         android:id="@+id/deleteAccButton"
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="sans-serif"
                         android:text="Delete Account"
@@ -107,8 +107,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp"
-            android:background="@color/white"
-            android:layout_marginTop="20dp">
+            android:background="@color/white">
 
         <TextView
             android:layout_width="wrap_content"
