--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     android:background="@color/purple_100">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center"
         android:padding="20dp">
@@ -22,8 +23,7 @@
             android:text="Welcome to DeliciFind"
             android:textColor="@color/black"
             android:textSize="35sp"
-            android:textStyle="bold"
-            android:layout_marginTop="80dp"/>
+            android:textStyle="bold"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/logo"
@@ -34,13 +34,13 @@
 
         <TextView
             android:id="@+id/sloganText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Savor the Flavor, Manage with Ease – Your Culinary Companion!"
+            android:text="Manage Kitchen, Explore Recipe, Cook, Enjoy !"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textAlignment="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="20dp"/>
 
         <Button
             android:id="@+id/createAccButton"
@@ -53,30 +53,18 @@
             app:cornerRadius="48dp"
             android:layout_marginTop="80dp"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="182dp"
+            android:layout_height="55dp"
+            android:backgroundTint="@color/purple_700"
+            android:text="Log In"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:cornerRadius="48dp"
+            android:layout_marginTop="10dp"/>
 
-            <TextView
-                android:id="@+id/haveAccText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Already have an account?"
-                android:textColor="@color/black"
-                android:textSize="18sp"/>
 
-            <TextView
-                android:id="@+id/loginLink"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Log In"
-                android:textAlignment="center"
-                android:textColor="@color/purple_700"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="2dp"/>
-        </LinearLayout>
 
     </LinearLayout>
 
