--- a/app/src/main/res/layout/activity_search_recipes_by_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_recipes_by_ingredients.xml
@@ -57,7 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Search Recipes"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="40dp"
+                />
 
         </LinearLayout>
 
