--- a/app/src/main/res/layout/recipe_ingredients.xml
+++ b/app/src/main/res/layout/recipe_ingredients.xml
@@ -7,9 +7,10 @@
     android:layout_margin="8dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/ingredientsQuantity"
             android:text="1 pc"
@@ -20,13 +21,15 @@
             android:textAlignment="center"
             android:textSize="16dp"
             android:padding="4dp"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"/>
+
         <ImageView
             android:id="@+id/ingredientsImage"
-            android:scaleType="center"
-            android:layout_width="80dp"
-            android:layout_height="50dp"/>
+            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="60dp"/>
+
         <TextView
             android:id="@+id/ingredientsName"
             android:text="Chicken"
@@ -38,7 +41,7 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:padding="4dp"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
