--- a/app/src/main/res/layout/recipe_ingredients.xml
+++ b/app/src/main/res/layout/recipe_ingredients.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     android:layout_margin="8dp">
 
     <LinearLayout
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/ingredientsQuantity"
-            android:text="1 pc"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:textAlignment="center"
-            android:textSize="16dp"
-            android:padding="4dp"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"/>
+        android:orientation="horizontal">
 
         <ImageView
+            android:layout_marginStart="10dp"
             android:id="@+id/ingredientsImage"
             android:layout_gravity="center"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="60dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp">
 
         <TextView
             android:id="@+id/ingredientsName"
@@ -36,13 +30,24 @@
             android:singleLine="true"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
             android:textSize="16dp"
-            android:textAlignment="center"
             android:textStyle="bold"
             android:padding="4dp"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/ingredientsQuantity"
+            android:text="1 pc"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:textSize="16dp"
+            android:padding="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     </LinearLayout>
 
