--- a/app/src/main/res/layout/recipe_instructions.xml
+++ b/app/src/main/res/layout/recipe_instructions.xml
@@ -16,6 +16,7 @@
             android:textSize="16dp"
             android:padding="4dp"
             android:textStyle="bold"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
@@ -23,6 +24,7 @@
             android:text="step 1 Description"
             android:textSize="16dp"
             android:padding="4dp"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
