--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,10 +17,12 @@
         android:padding="20dp">
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:text="Welcome to DeliciFind"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="35sp"
             android:textStyle="bold"/>
@@ -44,8 +46,8 @@
 
         <Button
             android:id="@+id/createAccButton"
-            android:layout_width="182dp"
-            android:layout_height="55dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_700"
             android:text="Create Account"
             android:textSize="16sp"
@@ -55,8 +57,8 @@
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="182dp"
-            android:layout_height="55dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:backgroundTint="@color/purple_700"
             android:text="Log In"
             android:textSize="16sp"
@@ -68,4 +70,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
