--- a/app/src/main/res/layout/activity_register_account.xml
+++ b/app/src/main/res/layout/activity_register_account.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp">
 
@@ -99,7 +99,7 @@
         <Button
             android:id="@+id/createAccButton"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:backgroundTint="#6B4EFF"
             android:text="Create Account"
@@ -121,7 +121,7 @@
                 android:layout_height="wrap_content"
                 android:text="Already have an account?"
                 android:textColor="@color/black"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/loginLink"
@@ -130,11 +130,11 @@
                 android:text="Log In"
                 android:textAlignment="center"
                 android:textColor="@color/purple_700"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="2dp"/>
         </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
